--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
+    "moment": "^2.27.0",
     "nuxt": "^2.13.0",
     "scrollreveal": "^4.0.6",
     "unirest": "^0.6.0"
