--- a/package.json
+++ b/package.json
@@ -27,5 +27,11 @@
     "eslint": "^7.2.0",
     "eslint-plugin-nuxt": "^1.0.0",
     "less-loader": "^6.1.1"
-  }
+  },
+   "config":{
+       "nuxt":{
+   	     "host":"127.0.0.1",
+	     "port":"3000"
+       }	
+   }
 }
