--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
+    "element-ui": "^2.13.2",
     "moment": "^2.27.0",
     "nuxt": "^2.13.0",
     "scrollreveal": "^4.0.6",
@@ -24,6 +25,7 @@
     "@nuxtjs/eslint-config": "^3.0.0",
     "@nuxtjs/eslint-module": "^2.0.0",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-component": "^1.1.1",
     "eslint": "^7.2.0",
     "eslint-plugin-nuxt": "^1.0.0",
     "less-loader": "^6.1.1"
